[package]
name = "pplx"
version = "0.1.0"
edition = "2021"
description = "CLI utility for Perplexity AI search and deep research"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"
toml = "0.8"
dirs = "6"
